--- a/SenseBox.Project/res/values/strings.xml
+++ b/SenseBox.Project/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="drawer_open">Drawer Opened</string>
     <string name="drawer_close">Drawer Closed</string>
     <string name="two_days_activity_name">Last 2 Days</string>
+        <string name="reports_activity_name">Current Weather Conditions</string>
     <string name="splash_screen_name">Sense Box </string>
+    <string name="title1">Graphs </string>
 
 </resources>
