Added Daily Min/Max Functionality. TODO:

--- a/SenseBox.Project/res/values/strings.xml
+++ b/SenseBox.Project/res/values/strings.xml
@@ -13,5 +13,9 @@
     <string name="splash_screen_name">Sense Box </string>
     <string name="title1">Graphs </string>
         <string name="default_action_bar_text">24 Hours Graphs </string>
+    <string name="one_week_graph_activity_name">Weekly Graphs </string>
+        <string name="last_month_graph_activity_name">Monthly Graphs </string>
+                <string name="last_three_months_graph_activity_name">Three Last Months Graphs </string>
+                                <string name="daily_report_activity_name">Daily Min Max Report </string>
 
 </resources>
